tests/ui/codemap_tests/huge_multispan_highlight.rs
fn main() {
    let x = "foo";























































































    let y = &mut x; //~ ERROR cannot borrow
}
